--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "catutils-ts",
+  "name": "glcat-ts",
   "version": "0.1.0",
-  "description": "who cares",
-  "main": "index.js",
+  "description": "WebGL wrapper with plenty of hackability",
   "author": "FMS-Cat",
   "license": "MIT",
+  "main": "./dist/bundle.js",
+  "types": "./dist/bundle.d.ts",
   "scripts": {
     "watch": "tsc -w src/index.ts --outDir dist",
-    "build": "tsc src/index.ts --outDir dist"
+    "build": "tsc",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/gl": "^4.1.0",
+    "@types/jest": "^23.3.10",
+    "@types/webgl-ext": "^0.0.30",
+    "eventemitter3": "^3.1.0",
+    "gl": "^4.1.1",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.5",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
   }
