--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -1,3 +1,4 @@
 FROM node:11.10.0
 
-RUN apt-get update && apt-get install -y xvfb libxi-dev
+RUN apt-get update
+RUN apt-get install -y xvfb libxi-dev libgl1-mesa-dev
