--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,11 +44,8 @@ jobs:
           keys:
             - deps-{{ checksum "package.json" }}
       - run:
-          name: Start Xvfb
-          command: export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
-      - run:
           name: Test
-          command: yarn test
+          command: xvfb-run -s "-ac -screen 0 1920x1080x24" yarn test --runInBand
 
 workflows:
   version: 2
