--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "WebGL wrapper with plenty of hackability",
   "author": "FMS-Cat",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/FMS-Cat/glcat-ts"
+  },
   "main": "./dist/glcat.js",
   "types": "./types/index.d.ts",
   "files": [
@@ -14,22 +18,25 @@
   "scripts": {
     "dev": "webpack-dev-server --mode development",
     "build-types": "tsc --emitDeclarationOnly",
-    "build-dist": "webpack --mode production",
-    "build": "yarn build-dist && yarn build-types",
+    "build-dev": "webpack --mode development",
+    "build-prod": "webpack --mode production",
+    "build": "yarn build-dev && yarn build-prod && yarn build-types",
     "test": "jest"
   },
-  "dependencies": {
-    "eventemitter3": "^3.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/gl": "^4.1.0",
     "@types/jest": "^23.3.10",
     "@types/webgl-ext": "^0.0.30",
+    "@types/webpack": "^4.39.1",
+    "@types/webpack-dev-server": "^3.1.7",
+    "eventemitter3": "^4.0.0",
     "fork-ts-checker-webpack-plugin": "^0.5.2",
     "gl": "^4.2.2",
     "jest": "^23.6.0",
     "ts-jest": "^23.10.5",
     "ts-loader": "^5.3.3",
+    "ts-node": "^8.4.1",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2",
     "webpack": "^4.29.5",
