--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "types"
   ],
   "scripts": {
+    "version": "yarn all",
+    "all": "yarn test && yarn build",
     "dev": "webpack-dev-server --mode development",
     "build-types": "tsc --emitDeclarationOnly",
     "build-dev": "webpack --mode development",
