--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "build": "yarn build-dev && yarn build-prod && yarn build-types",
     "test": "jest"
   },
-  "dependencies": {},
+  "dependencies": {
+    "eventemitter3": "^4.0.0"
+  },
   "devDependencies": {
     "@types/gl": "^4.1.0",
     "@types/jest": "^24.0.23",
     "@types/webgl-ext": "^0.0.30",
     "@types/webpack": "^4.41.0",
     "@types/webpack-dev-server": "^3.9.0",
-    "eventemitter3": "^4.0.0",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
     "gl": "^4.4.0",
     "jest": "^24.9.0",
