--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "types"
   ],
   "scripts": {
+    "preversion": "git-branch-is master && git merge dev",
     "version": "yarn all",
     "all": "yarn test && yarn build",
     "dev": "webpack-dev-server --mode development",
@@ -34,6 +35,7 @@
     "@types/webpack": "^4.41.0",
     "@types/webpack-dev-server": "^3.9.0",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
+    "git-branch-is": "^3.1.0",
     "gl": "^4.4.0",
     "jest": "^24.9.0",
     "ts-jest": "^24.2.0",
