--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "preversion": "git-branch-is dev",
     "version": "yarn all",
-    "postversion": "git checkout master && git merge dev && git push && git push --tags && npm publish",
+    "postversion": "git push && git checkout master && git merge dev && git push && git push --tags && npm publish",
     "all": "yarn test && yarn build",
     "dev": "webpack-dev-server --mode development",
     "build-types": "tsc --emitDeclarationOnly",
