why did I do so many things in a single commit lint, docs, and CI

--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
   "scripts": {
     "preversion": "git-branch-is dev",
     "version": "yarn all",
-    "postversion": "git push && git checkout master && git merge dev && git push && git push --tags && npm publish",
-    "all": "yarn test && yarn build",
+    "postversion": "git push && git checkout master && git merge dev && git push && git push --tags && git checkout dev",
+    "all": "yarn lint && yarn test && yarn clean && yarn build && yarn docs",
+    "clean": "rimraf dist docs types",
     "dev": "webpack-dev-server --mode development",
     "build-types": "tsc --emitDeclarationOnly",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
     "build": "yarn build-dev && yarn build-prod && yarn build-types",
-    "test": "jest"
+    "docs": "typedoc --out docs --mode file --excludeNotExported",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "test": "jest",
+    "gh-pages": "node ./utils/gh-pages.js"
   },
   "dependencies": {
     "eventemitter3": "^4.0.0"
@@ -35,14 +39,18 @@
     "@types/webgl-ext": "^0.0.30",
     "@types/webpack": "^4.41.0",
     "@types/webpack-dev-server": "^3.9.0",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
+    "eslint": "^6.8.0",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
     "git-branch-is": "^3.1.0",
     "gl": "^4.4.0",
     "jest": "^24.9.0",
+    "rimraf": "^3.0.1",
     "ts-jest": "^24.2.0",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.5.4",
-    "tslint": "^5.20.1",
+    "typedoc": "^0.16.9",
     "typescript": "^3.7.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
