--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@typescript-eslint/parser": "^2.19.0",
     "eslint": "^6.8.0",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
+    "gh-pages": "^2.2.0",
     "git-branch-is": "^3.1.0",
     "gl": "^4.4.0",
     "jest": "^24.9.0",
