--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "noUnusedLocals": true,
-    "lib": [ "dom", "es2017" ],
+    "downlevelIteration": true,
+    "lib": [ "dom", "es2020" ],
     "rootDir": "./src",
     "outDir": "./dist",
     "declaration": true,
