--- a/package.json
+++ b/package.json
@@ -2,58 +2,60 @@
   "name": "@fms-cat/glcat-ts",
   "version": "0.10.0",
   "description": "WebGL wrapper with plenty of hackability",
-  "author": "FMS-Cat",
+  "author": "FMS_Cat",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/FMS-Cat/glcat-ts"
   },
-  "main": "./dist/glcat.js",
+  "main": "dist/glcat.js",
+  "module": "dist/glcat.module.js",
   "types": "./types/index.d.ts",
   "files": [
-    "dist",
-    "types"
+    "/dist/",
+    "/ts*/",
+    "/types/",
+    "/LICENSE"
   ],
   "scripts": {
-    "preversion": "git-branch-is dev",
-    "version": "yarn all",
-    "postversion": "git push && git checkout master && git merge dev && git push && git push --tags && git checkout dev",
+    "dev": "cross-env DEV=1 SERVE=1 rollup -w -c -o dist/glcat.js",
     "all": "yarn lint && yarn test && yarn clean && yarn build && yarn docs",
-    "clean": "rimraf dist docs types",
-    "dev": "webpack-dev-server --mode development",
-    "build-types": "tsc --emitDeclarationOnly",
-    "build-dev": "webpack --mode development",
-    "build-prod": "webpack --mode production",
-    "build": "yarn build-dev && yarn build-prod && yarn build-types",
-    "docs": "typedoc --out docs --mode file --excludeNotExported",
-    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "clean": "rimraf dist/ docs/ ts*/ types/",
     "test": "jest",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "build": "yarn build-dev && yarn build-prod && yarn build-esm && yarn build-esmprod && yarn build-types",
+    "build-dev": "cross-env DEV=1 rollup -c -o dist/glcat.js",
+    "build-prod": "rollup -c -o dist/glcat.min.js",
+    "build-esm": "cross-env DEV=1 ESM=1 rollup -c -o dist/glcat.module.js",
+    "build-esmprod": "cross-env ESM=1 rollup -c -o dist/glcat.module.min.js",
+    "build-types": "tsc --declaration --declarationDir ./types --emitDeclarationOnly && downlevel-dts types ts3.4/types",
+    "docs": "typedoc --out docs --mode file --excludeNotExported",
     "gh-pages": "node ./utils/gh-pages.js",
-    "build-docker-image": "docker build -t fmscat/glcat-ts-circleci ./.circleci && docker push fmscat/glcat-ts-circleci"
+    "build-docker-image": "docker build -t fmscat/glcat-ts-circleci:14.4.0 ./.circleci && docker push fmscat/glcat-ts-circleci:14.4.0"
   },
-  "dependencies": {},
   "devDependencies": {
+    "@rollup/plugin-typescript": "^4.1.2",
     "@types/gl": "^4.1.0",
-    "@types/jest": "^24.0.23",
-    "@types/webgl-ext": "^0.0.30",
-    "@types/webpack": "^4.41.0",
-    "@types/webpack-dev-server": "^3.9.0",
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/parser": "^2.19.0",
+    "@types/jest": "^26.0.0",
+    "@types/node": "^14.0.13",
+    "@typescript-eslint/eslint-plugin": "^2.13.0",
+    "@typescript-eslint/parser": "^2.13.0",
+    "cross-env": "^7.0.2",
+    "downlevel-dts": "^0.5.0",
     "eslint": "^6.8.0",
-    "fork-ts-checker-webpack-plugin": "^3.1.1",
-    "gh-pages": "^2.2.0",
-    "git-branch-is": "^3.1.0",
-    "gl": "^4.4.0",
-    "jest": "^24.9.0",
-    "rimraf": "^3.0.1",
-    "ts-jest": "^24.2.0",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.5.4",
-    "typedoc": "^0.16.9",
-    "typescript": "^3.7.3",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "eslint-plugin-jest": "^23.7.0",
+    "gh-pages": "^2.1.1",
+    "gl": "^4.5.2",
+    "jest": "^26.0.1",
+    "rimraf": "^3.0.0",
+    "rollup": "^2.17.1",
+    "rollup-plugin-banner": "^0.2.1",
+    "rollup-plugin-serve": "^1.0.1",
+    "rollup-plugin-terser": "^6.1.0",
+    "ts-jest": "^26.1.0",
+    "ts-node": "^8.6.2",
+    "tslib": "^2.0.0",
+    "typedoc": "^0.15.5",
+    "typescript": "^3.9.5"
   }
 }
